# taqr

./: README.md  api.py  db.py  docker-compose.yml  domain_types.py  logger.py  main.py  provenance.py  pyproject.toml  samples.py  taqr.db
planner/: PLANNER_COMPRESSED.md  PLANNER_NEW.md  __init__.py  callbacks.py  llm.py  nodes.py  plan_agent.py  schemas.py  tools.py
planner/system_prompts/: PLANNER.md
provenance/: __init__.py  ddl.py  provenance.py  query_log.py  utils.py
tests/verifier/: test_top_k.py
ui/: .gitignore  README.md  package.json  vite.config.ts
ui/src/: styles.css
ui/src/components/taqr/: app-shell.tsx  navigation-sidebar.tsx  query-composer.tsx  run-reviewer.tsx  table-explorer.tsx  theme-toggle.tsx
ui/src/components/ui/: sheet.tsx  tabs.tsx  textarea.tsx
ui/src/hooks/: use-theme.ts
ui/src/lib/: api.ts
ui/src/routes/: __root.tsx  index.tsx
verifier/: __init__.py  schemas.py  top_k_ranking.py  verifications.py  verifier.py
