[project]
name = "taqr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "kagglehub>=1.0.2",
]
