[project]
name = "taqr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "google-genai>=2.11.0",
    "langchain-ollama>=1.1.0",
    "langchain[google-genai]>=1.3.13",
    "langgraph>=1.2.9",
    "langsmith>=0.10.5",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.2.0",
    "ruff>=0.15.22",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "kagglehub>=1.0.2",
]
